--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "OwnCloud 8 Bookmarks",
   "description": "Provides access to Owncloud 8 Bookmarks.",
-  "version": "1.4",
+  "version": "1.5",
   "icons": {
     "19": "small_icon.png",
     "38": "medium_icon.png",
@@ -19,11 +19,19 @@
   },
   "options_page": "settings_main.html",
   "permissions": [
+    "contextMenus",
     "tabs",
     "storage",
     "activeTab",
     "https://ajax.googleapis.com/",
     "<all_urls>"
   ],
+  "background":{
+      "persistent": true,
+      "scripts":[
+          "lib/jquery-2.1.4.min.js",
+          "app/background.js"
+      ]
+  },
   "content_security_policy": "script-src 'self' https://ajax.googleapis.com; object-src 'self'"
 }
