--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "OwnCloud 8 Bookmarks",
   "description": "Provides access to Owncloud 8 Bookmarks.",
-  "version": "1.5",
+  "version": "1.5.0",
   "icons": {
     "19": "small_icon.png",
     "38": "medium_icon.png",
@@ -17,7 +17,11 @@
     },
     "default_popup": "popup.html"
   },
-  "options_page": "settings_main.html",
+  "options_ui": {
+    "page": "settings_main.html",
+    "chrome_style": true
+    //"open_in_tab": true
+  },
   "permissions": [
     "contextMenus",
     "tabs",
